--- a/package.json
+++ b/package.json
@@ -15,13 +15,13 @@
 		"copyright": "Copyright © 2019 ${author}",
 		"mac": {
 			"category": "public.app-category.utilities",
-			"icon": "build/appicon.ico"
+			"icon": "build/appicon.png"
 		},
 		"win": {
-			"icon": "build/appicon.ico"
+			"icon": "build/appicon.png"
 		},
 		"linux": {
-			"icon": "build/appicon.ico"
+			"icon": "build/appicon.png"
 		},
 		"files": [
 			"build/**/*",
