--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
 		"electron": "^7.1.3",
 		"electron-builder": "^21.2.0",
 		"redux-devtools": "^3.5.0",
+		"redux-devtools-extension": "^2.13.8",
 		"wait-on": "^3.3.0"
 	}
 }
