--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
 		"react-redux": "^7.1.3",
 		"react-scripts": "3.3.0",
 		"redux": "^4.0.4",
-		"typescript": "^3.7.3"
+		"typescript": "^3.7.3",
+		"victory": "^33.1.7"
 	},
 	"scripts": {
 		"start": "rescripts start",
@@ -49,7 +50,7 @@
 		"eject": "react-scripts eject",
 		"electron-dev": "concurrently \"BROWSER=none npm start\" \"wait-on http://localhost:3000 && electron .\"",
 		"postinstall": "./node_modules/.bin/electron-builder install-app-deps",
-		"preelectron-pack": "npm run build",
+		"preelectron-dist": "npm run build",
 		"electron-dist": "./node_modules/.bin/electron-builder dist"
 	},
 	"eslintConfig": {
@@ -78,6 +79,7 @@
 		"@types/react": "^16.9.15",
 		"@types/react-dom": "^16.9.4",
 		"@types/react-redux": "^7.1.5",
+		"@types/victory": "^33.0.2",
 		"concurrently": "^5.0.0",
 		"electron": "^7.1.3",
 		"electron-builder": "^21.2.0",
